fixed select overlap visual bug

--- a/src/assets/scss/_select.scss
+++ b/src/assets/scss/_select.scss
@@ -11,7 +11,7 @@ select {
 
   border-radius: 8px;
   font-size: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem 0.5rem 1rem;
   color: $neutral-0;
   border: solid 1px $neutral-600;
   background-color: $neutral-700;
